fix: Active file bullet not showing anymore
This fixes active & hover file visuals in File Explorer in 0.10.6 version of Obsidian

fixes: #4

--- a/.theme/workspace.css
+++ b/.theme/workspace.css
@@ -282,7 +282,7 @@ Files & folders: active & hover */
   content: "\204D";
   font-size: 19px;
   position: absolute;
-  left: -17px;
+  left: -7px;
 }
 
 .nav-folder-children .nav-folder-children > .nav-file > .nav-file-title.is-active::before {
